RESOLVED FIXED87290
AX: Prevents assertion from potentially dereferencing null pointer.
https://bugs.webkit.org/show_bug.cgi?id=87290
Summary AX: Prevents assertion from potentially dereferencing null pointer.
David Tseng
Reported 2012-05-23 11:17:16 PDT
ax: Prevents assertion from potentially dereferencing null pointer.
Attachments
Patch (2.01 KB, patch)
2012-05-23 11:21 PDT, David Tseng
no flags
Patch (2.04 KB, patch)
2012-05-23 11:51 PDT, David Tseng
no flags
Patch (2.04 KB, patch)
2012-05-23 15:23 PDT, David Tseng
no flags
David Tseng
Comment 1 2012-05-23 11:21:27 PDT
WebKit Review Bot
Comment 2 2012-05-23 11:24:02 PDT
Attachment 143601 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 3 2012-05-23 11:48:06 PDT
Comment on attachment 143601 [details] Patch fix style issue, otherwise looks ok Also the title of the bug should be capital "AX" not lowercase
David Tseng
Comment 4 2012-05-23 11:51:03 PDT
chris fleizach
Comment 5 2012-05-23 12:10:58 PDT
(In reply to comment #4) > Created an attachment (id=143607) [details] > Patch title of bug should be uppercase AX
David Tseng
Comment 6 2012-05-23 15:23:39 PDT
chris fleizach
Comment 7 2012-05-23 15:24:15 PDT
Comment on attachment 143662 [details] Patch looks good. i assume you want CQ too
WebKit Review Bot
Comment 8 2012-05-23 17:30:07 PDT
Comment on attachment 143662 [details] Patch Clearing flags on attachment: 143662 Committed r118281: <http://trac.webkit.org/changeset/118281>
WebKit Review Bot
Comment 9 2012-05-23 17:30:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.