AX: Prevents assertion from potentially dereferencing null pointer. https://bugs.webkit.org/show_bug.cgi?id=87290

Patch by David Tseng <dtseng@google.com> on 2012-05-23
Reviewed by Chris Fleizach.

Changes to assertions. Coverage by existing tests.

* accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::cellForColumnAndRow):

Canonical link: https://commits.webkit.org/105065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118281 268f45cc-cd09-0410-ab3c-d52691b4dbfc